# NEACISNE-reverse-it

./: .gitignore  .gitmodules  README.md  whatsthis.sh
ASM PIC18/: IntroAsmPIC18.asm  SwitchCase.asm  readme
ASM PIC18/tp/LCDUser.X/: LCDUser.h  LCD_Char_User.c  LCD_Char_XY_User.c  LCD_Command_User.c  LCD_Cursor_XY_User.c  LCD_Init_User.c  LCD_String_User.c  LCD_String_XY_User.c  LCD_Write_Data_User.c  LCD_Write_Register_User.c  portLCDUser.h
ASM PIC18/tp/ex1/: ex11.asm  ex12.asm  ex13.asm
ASM PIC18/tp/ex2/: ex21.asm  ex22.asm
ASM PIC18/tp/ex3/: LCDUser.c  LCDUser.h  ex3.c  portLCDUser.h
ASM PIC18/tp/ex4/: LCDUser.c  ex4.c
ASM PIC18/tp/ex5/: TP1A_ex5.INI  TP1A_ex5.ht  TP1A_ex5.txt  ex5a.c
ASM PIC18/tp/ex6/: dft.c  dft.h  mainDft.c  mainVoltmeter.c
Architechture Processeurs/: Generalite.md
Architechture Processeurs/gpp/cm/: gpp-cm-2-motherBoard.pptx  gpp-cm-3-toolchain.pptx  gpp-cm-4-assembly langage.pptx  gpp-cm-5-cpu.pptx  gpp-cm-6-memory.pptx  gpp-cm-7-sandy bridge.pptx
Architechtures Parallele/: cm.md
Architechtures Parallele/TP1/: CMakeLists.txt
Architechtures Parallele/TP1/src/: testMathematics.cpp
Architechtures Parallele/cours/: cm.md
Architecture Processeurs/: Generalite.md
Architectures Parallele/TP1/: CMakeLists.txt  Makefile
Architectures Parallele/TP1/src/: testMathematics.cpp
Architectures Parallele/TP2/: CMakeLists.txt  Lisezmoi.txt  Makefile
Architectures Parallele/TP2/src/: testCountIf.cpp  testForEach.cpp
Architectures Parallele/TP2/src/include/: CountIf.hpp  ForEach.hpp
Architectures Parallele/TP3/: CMakeLists.txt  Lisezmoi.txt
Architectures Parallele/TP3/src/: testParallelHybridRecursiveMerge.cpp  testParallelStableMerge.cpp
Architectures Parallele/TP4/: CMakeLists.txt  Lisezmoi.txt
Architectures Parallele/TP4/src/: bench.c  matvec.c  matvec_r4.c  matvec_sse_r4.c
Architectures Parallele/TP4/src/include/: matvec.h  matvec_r4.h  matvec_sse_r4.h
Architectures Parallele/TP5/: CMakeLists.txt  Makefile
Architectures Parallele/TP5/src/: Metrics.cpp  testPipelinedBubbleSort.cpp
Architectures Parallele/TP5/src/include/: Metrics.hpp  bubbleSort.hpp  pipelinedBubbleSort.hpp
C++/: tuto.md
C++/Object Oriented Aspect/: Creational Design Patterns.hpp  Structural Design Patterns.hpp  gof.md
C++/TP1/: CMakeLists.txt  Lisezmoi.txt  Makefile  droite.txt  gauche.txt
C++/TP1/src/: contenu.cpp  decompte.cpp  difference.cpp  frequences.cpp
C++/TP2/: CMakeLists.txt  Makefile  config.txt  resultat.txt
C++/TP2/src/: chaleur.cpp  fraction.cpp
C++/TP3/: CMakeLists.txt  Makefile
C++/TP3/Exemples/: config1.txt  config2.txt  diffracted1.txt  diffracted2.txt  incident1.txt  incident2.txt
C++/TP3/src/: diffraction.cpp
C++/TP4/: CMakeLists.txt  Makefile
C++/TP4/inc/: fraction.hpp
C++/TP4/src/: fraction.cpp  libmaths.cpp  maths.cpp
C++/TP4/src/include/: libmaths.hpp
C++/TP5/: CMakeLists.txt  Makefile  intexpr.txt
C++/TP5/src/: Lexer.cpp  Token.cpp  automate.cpp  demo.cpp
C++/TP6/: CMakeLists.txt  Lisezmoi.txt  Makefile  correcte.txt  incorrecte.txt
C++/TP6/src/: Compiler.cpp  Lexer.cpp  Mne.cpp  Parser.cpp  Token.cpp  intexpr_check.cpp
C++/TP7/: CMakeLists.txt  Makefile
C++/TP7/src/: event.cpp  expr_check.cpp  stateOne.cpp  stateTwo.cpp  stateZero.cpp
C++/TP8/: CMakeLists.txt  Makefile
C++/TP8/src/: sysexp.cpp
C++/TP9bis/: CMakeLists.txt  Lisezmoi.txt  Makefile
C++/TP9bis/src/: NewFieldMap.cpp  diffraction.cpp
C/S1/: exam1_2  exam1_2.c  exam1_3  exam1_3.c  exam2
C/S1/tp2/: ex1  ex1.c  ex5.c
C/S1/tp3/: ex10  ex10.c  ex4.c  ex5b  ex5b.c
C/S1/tp4/: ex5a  ex5a.c  ex5b  ex5b.c  ex5c.c  ex6.c
C/S1/tp5/: ex1.c  ex2.c  ex3  ex3.c
C/S1/tp6/: TP6(new).c  main.c  tp6.cbp
C/S1/tp7/: deja_utf8.txt
C/S1/tp8/: Cmplx.c~
C/S1/tp9/: BMP_tuto  BMP_tuto.c
C/S2/: create_project.sh  generate_project.sh  makefile.gen  makefile.rec
C/S2/Doxy/: doxy.c
C/S2/TP0/: Doxyfile  main.c  makefile  tactix  tactix.c
C/S2/TP1/: makefile
C/S2/TP3/: makefile
C/S2/TP4/: Doxyfile  makefile
C/S2/TP5/: Doxyfile  makefile
Embedded Linux/TP1/: bc_pipe  depassementPile.c  exAlarm3Sigaction.c  exFork1.c  exSIGSEGV_action.c  exStrTok.c  exThread.c  exThreadCommut.c  exThread_sema_eleves.c  share_mem.c  shellSimple.c  shil  tube_anonymes.c  tube_bc.c
MATLAB/2A/CP/: calcul_predicteur.m  commande_predictive_a_un_pas_etudiants.m  (+1 more)
MATLAB/S1/: Suite.m
Real-Time Systems/: cheatsheet.md
S2/TP0/: tactix.h
S2/TP1/: Doxyfile  makefile
S2/TP3/: Doxyfile  makefile
Telecom/: Client  Client_TCP .c  Client_TCP .c~  Client_TCP.c  Client_UDP.c  References.c  Serveur  ServeurMAJ.c~  Serveur_UDP_MAJ .c  Serveur_UDP_MAJ .c~  serv_TP1A_info_tcp.c  serv_TP1A_info_tcp.c~
Telecom/MultiClient/: ServeurTCP.c  makefile  thethread.c
Telecom/SNTP/: Client_SNTP.c  makefile
Telecom/ServeurWeb/: index.html  serveurHTML.c
Telecom/TCP/: Client_TCP.c  Serveur_TCP_MAJ.c  serv_TP1A_info_tcp.c
Telecom/UDP/: Serveur_UDP.c  Serveur_UDP_MAJ.c
tpc/: exam1_1  exam1_1.c  exam2.c
tpc/tp1/: tp1_1  tp1_1.c
tpc/tp2/: ex2  ex3.c  ex6  ex6.c
tpc/tp3/: ex11  ex11.c  ex4  ex5  ex5a.c  ex5c  ex5c.c  ex7  ex7.c  ex9  ex9.c
tpc/tp4/: ex  ex5c  ex6  fibo  fibo.c
tpc/tp5/: ex4  ex4.c
tpc/tp6/: main.c~  tp6.c  tp6.depend  tp6.layout
tpc/tp7/: deja_iso.txt  ex1.c  ex1.c~  ex1_iso.c
tpc/tp8/: Cmplx.c  fiches.c
tpc/tp9/: BMP_tuto.c
(+845 files in other folders)
